update ciam input paths

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -17,17 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce962523-7d5c-4eac-b51b-e2efe41d67c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "517784ca-badd-41fe-a88c-7b4370260e5c",
    "metadata": {},
    "outputs": [],
@@ -46,8 +35,9 @@
     "import requests\n",
     "from dask_gateway import Gateway\n",
     "from pandas_datareader import wb as dr_wb\n",
-    "from sliiders import settings as sset\n",
     "from tqdm.auto import tqdm\n",
+    "\n",
+    "from sliiders import settings as sset\n",
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
@@ -735,13 +725,13 @@
     "There are three datasets that were manually constructed for use in `SLIIDERS`. They are available for download on Zenodo. Please download each file from Zenodo and copy to the path designated here.\n",
     "\n",
     "1. `ne_coastline_lines_CIAM_wexp_or_gtsm.shp`\n",
-    "Path: `sset.PATH_CIAM_COASTLINES` (All files sharing the name `ne_coastline_lines_CIAM_wexp_or_gtsm`, but with different extensions, should be downloaded to this directory.)\n",
+    "Path: `sset.PATH_CIAM_COASTLINES` (Download all files with the name `ne_coastline_lines_CIAM_wexp_or_gtsm` (but different extensions) to this directory.)\n",
     "Link: [TODO - include Zenodo link]\n",
     "\n",
     "Using the global coastlines derived from the Natural Earth layers, we included individual land masses formed by these coastlines only if they have either i) a non-zero value of exposure based on our exposure grid for population and capital assets, OR ii) if they have an associated coastal segment point, as derived primarily from the CoDEC GTSM station points. Association of a given land mass to nearby CoDEC point(s) was determined through manual inspection of the subset of land masses (n=636) with zero exposure in order to assess whether an intersecting or nearby station point represented that land area, resulting in the inclusion of 171 small land masses for which no population or capital is present but for which a coast point is associated.\n",
     "\n",
     "2. `gtsm_stations_eur_tothin.shp`\n",
-    "Path: [TODO - fill this] (All files sharing the name `ne_coastline_lines_CIAM_wexp_or_gtsm`, but with different extensions, should be downloaded to this directory.)\n",
+    "Path: `sset.DIR_GTSM_STATIONS_TOTHIN` (Download all files with the name `gtsm_stations_eur_tothin` (but different extensions) to this directory.)\n",
     "Link: [TODO - include Zenodo link]\n",
     "\n",
     "These 5,637 station points are a subset of the full CoDEC dataset (n=14,110) representing sites along European coastlines that are roughly five times more densely-spaced compared to the rest of the globe, as described in Muis et al. 2020. This subset of points are those that will be thinned by 5x to approximately match the density of CoDEC coast stations globally. Some manual inclusion criteria for this subset was applied in GIS due to the fact that simply seeking to select dense European stations based on the “station_name” field in the dataset, which contains the substring “eur” for all European locations, results in an over-selection of desired points (n=6,132), with many North African coastal points that are not densely-spaced containing this substring in their “station_name” as well. Therefore, European points were manually identified, with small islands, such as in the Mediterranean, included if their land mass contained 5 or more station points, which guarantees that they will be represented by at least one station point following the 5x thinning process. The resultant subset of points is used as a data input for the coastal segment construction in the preprocessing of the SLIIDERS dataset.\n",
