--- a/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ebc3268f-bf70-421c-bd04-aa58b19d39f9",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a8910b8e",
    "metadata": {},
    "outputs": [],
@@ -50,17 +50,17 @@
     "import xarray as xr\n",
     "from shapely.geometry import Point\n",
     "\n",
-    "from sliiders.settings import DIR_CIAM_SHAPEFILES, PATH_SEG_CENTROIDS, PATH_GTSM_SURGE"
+    "from sliiders.settings import DIR_GTSM_STATIONS_TOTHIN, PATH_SEG_CENTROIDS, PATH_GTSM_SURGE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f685e2db-d168-4ad5-8f42-7beba55370fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GTSMPTS_EUR = DIR_CIAM_SHAPEFILES / \"gtsm_stations_eur_tothin.shp\""
+    "GTSMPTS_EUR = DIR_GTSM_STATIONS_TOTHIN / \"gtsm_stations_eur_tothin.shp\""
    ]
   },
   {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cfa7e3c2",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "76754f22",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "730731f6",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "abcb4fc8",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "88c6ce74",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c04a694e",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3d03b678",
    "metadata": {},
    "outputs": [],
