outputs cleared for better viewing and isort+black

--- a/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/exposure/1-create-coastline-segments.ipynb
@@ -50,7 +50,11 @@
     "import xarray as xr\n",
     "from shapely.geometry import Point\n",
     "\n",
-    "from sliiders.settings import DIR_GTSM_STATIONS_TOTHIN, PATH_SEG_CENTROIDS, PATH_GTSM_SURGE"
+    "from sliiders.settings import (\n",
+    "    DIR_GTSM_STATIONS_TOTHIN,\n",
+    "    PATH_SEG_CENTROIDS,\n",
+    "    PATH_GTSM_SURGE,\n",
+    ")"
    ]
   },
   {
