non-essential outputs cleared for better viewing; 'HISTORY' cleared for version control in the future

--- a/notebooks/create-SLIIDERS-SLR/process-localizesl-output.ipynb
+++ b/notebooks/create-SLIIDERS-SLR/process-localizesl-output.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/srv/conda/envs/notebook/lib/python3.9/site-packages/dask_gateway/client.py:21: FutureWarning: format_bytes is deprecated and will be removed in a future release. Please use dask.utils.format_bytes instead.\n",
-      "  from distributed.utils import LoopRunner, format_bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dask.config\n",
     "import numpy as np\n",
@@ -54,14 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# attrs for output zarr\n",
     "AUTHOR = \"Ian Bolliger, Daniel Allen\"\n",
     "CONTACT = \"ibolliger@rhg.com, dallen@berkeley.edu\"\n",
-    "HISTORY = \"\"\"version 1.0: initial version\"\"\"\n",
     "METHOD = \"\"\"LocalizeSL was used to estimate monte carlo draws of future GMSL and LMSL relative to a vertical datum of MSL2000. Data quality adjustments:\n",
     "1. RCP6 ignored due to no post-2100 projections and fewer GCMS used for pre-2100 projections.\n",
     "2. Sites with <3 GCMs for an pre-2100 years dropped.\n",
@@ -74,24 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b6e1f830e4047868c138d366392ca5e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h2>GatewayCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n<style scoped>\\n    …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gateway = Gateway()\n",
     "cluster = gateway.new_cluster(\n",
@@ -352,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +380,6 @@
     "    {\n",
     "        \"author\": AUTHOR,\n",
     "        \"contact\": CONTACT,\n",
-    "        \"history\": HISTORY,\n",
     "        \"description\": DESCRIPTION,\n",
     "        \"method\": METHOD,\n",
     "        \"updated\": pd.Timestamp.now(tz=\"US/Pacific\").strftime(\"%c\"),\n",
@@ -433,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "local_metadata": {
      "tags": []
@@ -447,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,40 +464,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.backends.zarr.ZarrStore at 0x7f452daf9ac0>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sl_arr.to_zarr(FS.get_mapper(PATH_SLIIDERS_SLR.relative_to(\"/gcs\")), mode=\"w\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, None)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cluster.close(), client.close()"
    ]
@@ -873,303 +825,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "1b34fde2f47b477b9dce250a73c15a73": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "41edbc039e4d4b54a70a02f39370fb56": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "description": "Scale",
-       "layout": "IPY_MODEL_fa7f6ad6ff6d4557b2f2296710cc4986",
-       "style": "IPY_MODEL_b1b362b94dfe49a0a407345f399c35ae"
-      }
-     },
-     "4606a72f4ca3482696654813df36dd9d": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "min_width": "150px"
-      }
-     },
-     "4d4f93e8f5e7484d92f9ecf7d4daeda6": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "53375c3b8ed94c7798f5eb0fc0d5cdfc": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "5b603e22541d4ed989db543e529f1534": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "description": "Adapt",
-       "layout": "IPY_MODEL_fa7f6ad6ff6d4557b2f2296710cc4986",
-       "style": "IPY_MODEL_c936d2e233034f3daec76096401dcbf1"
-      }
-     },
-     "5b6e1f830e4047868c138d366392ca5e": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "VBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_8797cad2b51c40b5baafc811286a4a42",
-        "IPY_MODEL_b9fbfd34e7af4f19b8d67a1595e4210d",
-        "IPY_MODEL_d56d2b393de5405489c9896961d16dfc",
-        "IPY_MODEL_7385e6f9b8a947d4b9470463cee2be69"
-       ],
-       "layout": "IPY_MODEL_9d6bde3af7b3413bae1c9e10af0cc624"
-      }
-     },
-     "61e236fff72a433e8d063e104e027cb5": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "64dd4a45b8ff4a3ab2324328089164bf": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "7385e6f9b8a947d4b9470463cee2be69": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_fe7039f16f2f47f9be4ce3159168f22c",
-       "style": "IPY_MODEL_53375c3b8ed94c7798f5eb0fc0d5cdfc",
-       "value": "<p><b>Dashboard: </b><a href=\"/services/dask-gateway/clusters/daskhub-dev.818fac95db164e88b7c67ff97957efe9/status\" target=\"_blank\">/services/dask-gateway/clusters/daskhub-dev.818fac95db164e88b7c67ff97957efe9/status</a></p>\n"
-      }
-     },
-     "7450d315d74e4c9c983c75138b9dcfd3": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Minimum",
-       "layout": "IPY_MODEL_fa7f6ad6ff6d4557b2f2296710cc4986",
-       "step": 1,
-       "style": "IPY_MODEL_4d4f93e8f5e7484d92f9ecf7d4daeda6"
-      }
-     },
-     "74c027a0b37c4808812335a6dba7f846": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "7d72a3a209234895b2149784e7763fff": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "min_width": "500px"
-      }
-     },
-     "8089a2499d9a434aa811744bc08cbf6e": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "81df91adf76545c3b84b38b998af6a81": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_7450d315d74e4c9c983c75138b9dcfd3",
-        "IPY_MODEL_acb5119699874efdb717eedd0763924d",
-        "IPY_MODEL_5b603e22541d4ed989db543e529f1534"
-       ],
-       "layout": "IPY_MODEL_74c027a0b37c4808812335a6dba7f846"
-      }
-     },
-     "8797cad2b51c40b5baafc811286a4a42": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_a9ee3a8e4ebd4560bac8307b397e37b7",
-       "style": "IPY_MODEL_8089a2499d9a434aa811744bc08cbf6e",
-       "value": "<h2>GatewayCluster</h2>"
-      }
-     },
-     "880bf26779534b719b49eb1aa3861a75": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "8b1938f78277408c836353fe98f4e611": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "998b358d51c8427d9db379e44c20c9f8": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "9d6bde3af7b3413bae1c9e10af0cc624": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "a9ee3a8e4ebd4560bac8307b397e37b7": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "acb5119699874efdb717eedd0763924d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Maximum",
-       "layout": "IPY_MODEL_fa7f6ad6ff6d4557b2f2296710cc4986",
-       "step": 1,
-       "style": "IPY_MODEL_61e236fff72a433e8d063e104e027cb5"
-      }
-     },
-     "b1b362b94dfe49a0a407345f399c35ae": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "b4d99ec88fed497584a51b356b5892ec": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "AccordionModel",
-      "state": {
-       "_titles": {
-        "0": "Manual Scaling",
-        "1": "Adaptive Scaling"
-       },
-       "children": [
-        "IPY_MODEL_dab8560f05d64935a7aa0d8f7f25cd89",
-        "IPY_MODEL_81df91adf76545c3b84b38b998af6a81"
-       ],
-       "layout": "IPY_MODEL_7d72a3a209234895b2149784e7763fff",
-       "selected_index": null
-      }
-     },
-     "b9fbfd34e7af4f19b8d67a1595e4210d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_f2d9a9a6e4ec4ba599c6d6b5bd9e3c4c",
-        "IPY_MODEL_b4d99ec88fed497584a51b356b5892ec"
-       ],
-       "layout": "IPY_MODEL_64dd4a45b8ff4a3ab2324328089164bf"
-      }
-     },
-     "c936d2e233034f3daec76096401dcbf1": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "cc74e78a018f4edb8d8d180b23dbf590": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "IntTextModel",
-      "state": {
-       "description": "Workers",
-       "layout": "IPY_MODEL_fa7f6ad6ff6d4557b2f2296710cc4986",
-       "step": 1,
-       "style": "IPY_MODEL_998b358d51c8427d9db379e44c20c9f8"
-      }
-     },
-     "d56d2b393de5405489c9896961d16dfc": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_880bf26779534b719b49eb1aa3861a75",
-       "style": "IPY_MODEL_f048c88d018c4ff9bd9efb1597a7918f",
-       "value": "<p><b>Name: </b>daskhub-dev.818fac95db164e88b7c67ff97957efe9</p>"
-      }
-     },
-     "dab8560f05d64935a7aa0d8f7f25cd89": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_cc74e78a018f4edb8d8d180b23dbf590",
-        "IPY_MODEL_41edbc039e4d4b54a70a02f39370fb56"
-       ],
-       "layout": "IPY_MODEL_1b34fde2f47b477b9dce250a73c15a73"
-      }
-     },
-     "f048c88d018c4ff9bd9efb1597a7918f": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "f2d9a9a6e4ec4ba599c6d6b5bd9e3c4c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_4606a72f4ca3482696654813df36dd9d",
-       "style": "IPY_MODEL_8b1938f78277408c836353fe98f4e611",
-       "value": "\n<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table style=\"text-align: right;\">\n    <tr><th>Workers</th> <td>140</td></tr>\n    <tr><th>Cores</th> <td>140</td></tr>\n    <tr><th>Memory</th> <td>910.00 GiB</td></tr>\n</table>\n</div>\n"
-      }
-     },
-     "fa7f6ad6ff6d4557b2f2296710cc4986": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {
-       "width": "150px"
-      }
-     },
-     "fe7039f16f2f47f9be4ce3159168f22c": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
