Notebooks updated for cleaning and incorporating newer CIA WFB

--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk2_reorg_and_impute_ypk.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk2_reorg_and_impute_ypk.ipynb
@@ -41,10 +41,18 @@
   {
    "cell_type": "markdown",
    "id": "7444df03-7e87-43d1-bf13-bf7f7cd9885e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Importing all raw data, and creating a merged, long-panel version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dacf6537-d3e6-48b0-92ef-4f6a71ced27c",
    "metadata": {},
    "source": [
-    "## Importing all raw data, and creating a merged, long-panel version\n",
-    "\n",
     "### PWT"
    ]
   },
@@ -320,9 +328,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cia = pd.read_parquet(sset.DIR_YPK_INT / \"cia_wf_gdp_constant_2017_ppp_usd_ver.parquet\")\n",
+    "cia = pd.read_parquet(sset.PATH_CIA_INT)[[\"rgdpna_17\", \"rgdpna_pc_17\"]].rename(\n",
+    "    columns={\"rgdpna_17\": \"cia_rgdpna\", \"rgdpna_pc_17\": \"cia_rgdpna_pc\"}\n",
+    ")\n",
     "gdp_pop_df = gdp_pop_df.merge(\n",
-    "    cia[[\"cia_rgdpna\"]], left_index=True, right_index=True, how=\"outer\"\n",
+    "    cia[[\"cia_rgdpna\", \"cia_rgdpna_pc\"]], left_index=True, right_index=True, how=\"outer\"\n",
     ")"
    ]
   },
@@ -3406,380 +3416,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "0b9dcb8e7e194842ae99b1a9baea9759": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_ee7a58fc46dd4b4d9da4f91588307bb2",
-       "style": "IPY_MODEL_561a97a4b45448a9a8eae441f8e5d0da",
-       "value": "100%"
-      }
-     },
-     "1c73fdc454c6491fb61f02cb7ed9fb60": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "1c9166276ee347d39c95faf165bc9450": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_53f1e8cca07a4d38aee57777f84c46e9",
-       "style": "IPY_MODEL_fdee249ae0a74cd5883c86469c39aab9",
-       "value": " 58/128 [00:03&lt;00:03, 18.74it/s]"
-      }
-     },
-     "2219a9c4f88340f88bdac773d3ff4b81": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_0b9dcb8e7e194842ae99b1a9baea9759",
-        "IPY_MODEL_bfb81f9cf73640fa97dd0610729aff52",
-        "IPY_MODEL_7898ad926b0d4883bcba893ae7fc4767"
-       ],
-       "layout": "IPY_MODEL_fd84190ae61144e09e5218bfe17d1fc7"
-      }
-     },
-     "28f49eb672ba4d298a6053625cd08683": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_93f37f94c1c743138ac2c6ee01c067a8",
-       "max": 41,
-       "style": "IPY_MODEL_7f3aaa711aac4b12852fd21f7e39945d",
-       "value": 41
-      }
-     },
-     "2ca5cda929ec4f598887d57499131c4e": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "2cf7257329bc449a8f7f2cea82f102e2": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "2f2ef046bcef46b8977cc0ec176e5e3d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "3e4ddebc6d8146c5aa104043051a7d9c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_7080a43f19074187898a40c3a20ee40d",
-       "style": "IPY_MODEL_ca9b28f1e0f14fc8b47d9c8744aed724",
-       "value": "100%"
-      }
-     },
-     "3f5b1a2098e44766aa993c6b82496274": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_404dbe7264f44e20bfcf76a2442bc307",
-        "IPY_MODEL_d472be28fc3f41e9a88461090353c6e7",
-        "IPY_MODEL_1c9166276ee347d39c95faf165bc9450"
-       ],
-       "layout": "IPY_MODEL_9c15bafa92dc45289705416df944586c"
-      }
-     },
-     "404dbe7264f44e20bfcf76a2442bc307": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_d70e0b24d77f4ae8a376588cb6ed1950",
-       "style": "IPY_MODEL_7552bca25c9a43a2905ae9fde45c5edb",
-       "value": " 45%"
-      }
-     },
-     "45da96f00ed548cfa6d134939acbadd5": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_c21431b349d84789982ea663823146b3",
-       "style": "IPY_MODEL_8cb6432b2f084c3cb409d6c7beba6632",
-       "value": "100%"
-      }
-     },
-     "4d24dc58e4b84e11a720130e59a5cd77": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_45da96f00ed548cfa6d134939acbadd5",
-        "IPY_MODEL_28f49eb672ba4d298a6053625cd08683",
-        "IPY_MODEL_f0842f58af714d499f34aedec233b7c9"
-       ],
-       "layout": "IPY_MODEL_1c73fdc454c6491fb61f02cb7ed9fb60"
-      }
-     },
-     "50b4c5c87b804e0f9214977cd06fef37": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_f1fd6be11513474aa87063932f6eac2b",
-       "max": 128,
-       "style": "IPY_MODEL_729bb13470b447e79b3caea1241f1e93",
-       "value": 128
-      }
-     },
-     "53f1e8cca07a4d38aee57777f84c46e9": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "55b9a6a30f8b416cbba6c9d62e2087fd": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_3e4ddebc6d8146c5aa104043051a7d9c",
-        "IPY_MODEL_50b4c5c87b804e0f9214977cd06fef37",
-        "IPY_MODEL_5c2902f5fee74ae3aa47520fef604943"
-       ],
-       "layout": "IPY_MODEL_63385f1808b547e6a8d3d4ed7b96b70a"
-      }
-     },
-     "561a97a4b45448a9a8eae441f8e5d0da": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "5c2902f5fee74ae3aa47520fef604943": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_f81dbdbbbbf54f7ca9164896bc1bff6e",
-       "style": "IPY_MODEL_2ca5cda929ec4f598887d57499131c4e",
-       "value": " 128/128 [00:06&lt;00:00, 18.85it/s]"
-      }
-     },
-     "63385f1808b547e6a8d3d4ed7b96b70a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "7080a43f19074187898a40c3a20ee40d": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "729bb13470b447e79b3caea1241f1e93": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "7552bca25c9a43a2905ae9fde45c5edb": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "7898ad926b0d4883bcba893ae7fc4767": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_a21a9092bda140fdafae94f953e21434",
-       "style": "IPY_MODEL_2cf7257329bc449a8f7f2cea82f102e2",
-       "value": " 229/229 [00:00&lt;00:00, 517.42it/s]"
-      }
-     },
-     "7f3aaa711aac4b12852fd21f7e39945d": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "8b21dc66894e4f06aaf34585481aae6e": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "8cb6432b2f084c3cb409d6c7beba6632": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "93f37f94c1c743138ac2c6ee01c067a8": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "9c15bafa92dc45289705416df944586c": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "a21a9092bda140fdafae94f953e21434": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "a2f1698ea33a4075b704c93fbfe2a56d": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ab97341f3436466aa6f4964db63be7f6": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "bfb81f9cf73640fa97dd0610729aff52": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_8b21dc66894e4f06aaf34585481aae6e",
-       "max": 229,
-       "style": "IPY_MODEL_d578d2e01b464318a2a7aa63c44b45a2",
-       "value": 229
-      }
-     },
-     "c21431b349d84789982ea663823146b3": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ca9b28f1e0f14fc8b47d9c8744aed724": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "d472be28fc3f41e9a88461090353c6e7": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "danger",
-       "layout": "IPY_MODEL_f300e0de6459495c925d508aa567cc10",
-       "max": 128,
-       "style": "IPY_MODEL_ab97341f3436466aa6f4964db63be7f6",
-       "value": 58
-      }
-     },
-     "d578d2e01b464318a2a7aa63c44b45a2": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "d70e0b24d77f4ae8a376588cb6ed1950": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ee7a58fc46dd4b4d9da4f91588307bb2": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "f0842f58af714d499f34aedec233b7c9": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_a2f1698ea33a4075b704c93fbfe2a56d",
-       "style": "IPY_MODEL_2f2ef046bcef46b8977cc0ec176e5e3d",
-       "value": " 41/41 [00:02&lt;00:00, 17.28it/s]"
-      }
-     },
-     "f1fd6be11513474aa87063932f6eac2b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "f300e0de6459495c925d508aa567cc10": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "f81dbdbbbbf54f7ca9164896bc1bff6e": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "fd84190ae61144e09e5218bfe17d1fc7": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "fdee249ae0a74cd5883c86469c39aab9": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
